<resources>
    <string name="activity_liking_home">Liking健身</string>
    <string name="tab_liking_home_my">我</string>
    <string name="tab_liking_home_recharge">购卡</string>
    <string name="tab_liking_home_nearby">营养餐</string>
    <string name="tab_liking_home_lesson">约课</string>
    <string name="layout_self_help_group">自助团体课</string>
    <string name="layout_bing_bracelet">绑定手环</string>
    <string name="layout_bing_bracelet_my">我的手环</string>
    <string name="layout_water_rate">水费充值</string>
    <string name="layout_invite_friends">邀请好友</string>
    <string name="layout_coupons">优惠券</string>
    <string name="layout_contact_join">联系加盟</string>
    <string name="layout_open_door">密码开门</string>
    <string name="layout_become_teacher">成为教练</string>
    <string name="layout_about_us">关于我们</string>
    <string name="layout_check_update">检测更新</string>
    <string name="layout_more">更多</string>
    <string name="lesson_time">时间：</string>
    <string name="lesson_venues">场馆：</string>
    <string name="lesson_address">地点：</string>
    <string name="lesson_teacher">教练：</string>
    <string name="immadetails_appointment">立即预约</string>
    <string name="title_activity_about">关于我们</string>
    <string name="immediately_submit">立即提交</string>
    <string name="title_activity_contact_join">联系加盟</string>
    <string name="tab_title_group_lesson">团体课</string>
    <string name="tab_title_private_lesson">私教课</string>
    <string name="hint_login_phone">请输入手机号码</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="login_btn_text">登录</string>
    <string name="loading_upload">正在上传</string>
    <string name="loading_data">数据正在加载…</string>
    <string name="login_exit_message">您确定要退出吗?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="wifi">WiFi</string>
    <string name="shower">淋浴</string>
    <string name="hour_24">24小时</string>
    <string name="pay_alipay_type">支付宝支付</string>
    <string name="pay_wechat_type">微信支付</string>
    <string name="share_success">分享成功</string>
    <string name="share_user_cancel">取消分享</string>
    <string name="share_fail">分享失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="period_of_validity">有效期</string>
    <string name="card_number">卡号</string>
    <string name="buy_card_time">办卡时间</string>
    <string name="use_time">使用时段</string>
    <string name="promotion_card">升级卡</string>
    <string name="flow_card">续卡</string>
    <string name="cancel_appointment">取消预约</string>
    <string name="not_start">未开始</string>
    <string name="not_start_courses">课程尚未开始</string>
    <string name="start_process">进行中</string>
    <string name="courses_complete">已结束</string>
    <string name="courses_cancel">已取消</string>
    <string name="immediately_buy_btn">立即购买</string>
    <string name="get_meals_address">取餐地址</string>
    <string name="get_meals_time">请选择取餐时间</string>
    <string name="immediately_pay">立即支付</string>
    <string name="dialog_message_clear_shopping_cart">您是否确定清空购物车?</string>
    <string name="please_select_coupons">优惠券</string>
    <string name="title_dishes_confirm_order">确认订单</string>
    <string name="tab_title_dishes">营养餐</string>
    <string name="tab_title_my_card">会员卡</string>
    <string name="get_meal_time">取餐时间：</string>
    <string name="get_meal_address">取餐地址：</string>
    <string name="dishes_order_state_submit">已提交</string>
    <string name="dishes_order_state_payed">已支付</string>
    <string name="dishes_order_state_cancel">已取消</string>
    <string name="dishes_order_state_complete">已取餐</string>
    <string name="details_get_meals_shop">取餐门店</string>
    <string name="eating_user_phone">手机号</string>
    <string name="eating_user_name">姓名</string>
    <string name="details_pay_type">支付方式</string>
    <string name="pay_type_free_of">免金额支付</string>
    <string name="title_dishes_details">订单详情</string>
    <string name="confirm_get_meal">确认领餐</string>
    <string name="go_pay">去支付</string>
    <string name="title_my_card">我的会员卡</string>
    <string name="pay_free_type">免金额支付</string>
    <string name="courses_state_payed">已支付</string>
    <string name="courses_state_complete">已结束</string>
    <string name="courses_state_cancel">已取消</string>
    <string name="title_courses_details">课程详情</string>
    <string name="title_my_train_data">训练数据</string>
    <string name="sex_man">男</string>
    <string name="sex_men">女</string>
    <string name="title_open_the_door">开门</string>
    <string-array name="WheelArrayDefault">
        <item>AigeStudio</item>
        <item>Aige</item>
        <item>爱哥</item>
        <item>الحب  اخي</item>
        <item>jeg elsker</item>
        <item>사랑해요 형</item>
        <item>Amor de irmão</item>
        <item>armastan</item>
        <item>愛の兄</item>
        <item>обичам те</item>
        <item>любовь - братa</item>
        <item>miłość bracie</item>
        <item>Liebe</item>
        <item>Lamour</item>
        <item>rakastan sinua</item>
        <item>láska..</item>
        <item>dragostea.</item>
        <item>jag älskar</item>
        <item>ljubezen, brat.</item>
        <item>愛哥</item>
        <item>ชอบพี่</item>
        <item>αγάπη μου</item>
        <item>a szerelem.</item>
        <item>Amore, fratello.</item>
    </string-array>
    <string name="share_invite_friend_title">分享标题</string>
    <string name="share_invite_friend_content">分享内容</string>
    <string name="title_write_invite_code">填写邀请码</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_phone">请输入联系方式</string>
    <string name="hint_input_city">请输入所在城市</string>
    <string name="become_teacher_prompt">信息提交成功后工作人员会与您联系，请耐心等待</string>
    <string name="title_become_private_teacher">成为教练</string>
    <string name="title_gruop_detials">团体课详情</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="no_dishes_order">暂无订单</string>
    <string name="no_coupons_data">暂无优惠券</string>
    <string name="no_card_data">暂无购卡订单</string>
    <string name="no_courese_data">暂时没有课程</string>
    <string name="no_data">暂无数据</string>
    <string name="diaog_got_it">知道了</string>
    <string name="title_change_shop">选择门店</string>
    <string name="sold_out">已售罄</string>
    <string name="state_view_no_login_text">您还未登录</string>
    <string name="title_my_card_details">会员卡详情</string>
    <string name="vip_agreement">《平台会员协议》</string>
    <string name="appointment_fill">预约已满</string>
    <string name="guide_intellect_exercise">智能健身房</string>
    <string name="guide_intellect_explain">让健身这件事从此变得智能化</string>
    <string name="guide_private_teacher">专属私教</string>
    <string name="guide_private_teacher_explain">线上预定你的专属教练</string>
    <string name="guide_data">健身数据</string>
    <string name="guide_data_explain">一个APP连接店内所有智能设备</string>
    <string name="guide_to_main_btn">开启智能健身</string>
    <string name="exit_login">退出登录</string>
    <string name="dialog_know">知道了</string>
    <string name="dialog_app_update">立即更新</string>
    <string name="confirm_complete_courese">您确定完成该课程吗?</string>
    <string name="network_contact_fail">网络连接异常，请检查网络</string>
    <string name="my_courses_details_complete">该课程已确定完成</string>
    <string name="attend_class_number">上课人数</string>
    <string name="courses_time">课程时长</string>
    <string name="order_courses_times">上课次数</string>
    <string name="courses_address">上课地点</string>
    <string name="end_time">有效期</string>
    <string name="select_coupons_info">请选择优惠券</string>
    <string name="train_project">训练项目</string>
    <string name="next_text">下一步(1/6)</string>
    <string name="head_image_next_btn">下一步（2/6）</string>
    <string name="sex_next_btn">下一步（3/6）</string>
    <string name="select_birthday_next_btn">下一步（4/6）</string>
    <string name="select_height_next_btn">下一步(5/6)</string>
    <string name="skip">跳过</string>
    <string name="activity_title_writename">输入昵称</string>
    <string name="activity_title_userHeadImage">添加头像</string>
    <string name="activity_title_sex">选择性别</string>
    <string name="activity_title_select_birthday">选择出生日期</string>
    <string name="activity_title_weight">选择体重</string>
    <string name="select_weight_next_btn">下一步（6/6）</string>
    <string name="complete_btn">完成</string>
    <string name="activity_title_complete_userinfo">完成个人信息设置</string>
    <string name="head_select_image_prompt">点击上传头像</string>
    <string name="activity_title_change_address">选择上课地址</string>
    <string name="activity_title_confirm_buy_group_courses">确认购买团课</string>
    <string name="home_left_menu">[切换]</string>
    <string name="not_free_group_courses">付费团体课</string>
    <string name="share">分享</string>
    <string name="gymAddress">场馆地址</string>
    <string name="gymName">场馆名称</string>
    <string name="water_rate">剩余水费</string>
    <string name="buy_card_agree">购卡即同意</string>
    <string name="notice">公告</string>
    <string name="open_the_door">开门</string>
    <string name="my_card_gym_name">健身房名称</string>
    <string name="my_card_gym_address">健身房地址</string>
    <string name="no_start">未开始</string>
    <string name="is_doing">进行中</string>
    <string name="is_over">已结束</string>
    <string name="is_cancel">已取消</string>
    <string name="activity_title_my_group_details">团体课详情</string>
    <string name="notice_prompt">提示</string>
    <string name="no_announcement">暂无公告</string>
    <string name="location_fail">定位失败·重新定位</string>
    <string name="re_location">重新定位</string>
    <string name="free_courses">免费团体课</string>
    <string name="self_courses">自助团体课</string>
    <string name="my_free_group_courses">免费</string>
    <string name="my_not_free_group_courses">付费</string>
    <string name="current_city_no_dredge">当前定位城市尚未开通服务</string>
    <string name="go_buy_card">去购卡</string>
    <string name="buy_card">购卡</string>
    <string name="continue_card">续卡</string>
    <string name="upgrade_card">升级卡</string>
    <string name="location_fails_confirm">定位失败，请确认场馆后购买会员卡</string>
    <string name="current_city_no_service">当前定位城市尚未开通服务，敬请期待</string>
    <string name="join_self_courses">加入课程</string>
    <string name="title_select_courses">选择课程</string>
    <string name="address">地址：</string>
    <string name="self_courses_name">自助</string>
    <string name="self_courses_time">时长：</string>
    <string name="courses_appliance">器械：</string>
    <string name="self_courses_other">当前时间预留教练排团体课</string>
    <string name="self_courses_goto_home">前往首页查看课程</string>
    <string name="self_group_courses_none_hint">未选择课程，请选择锻炼课程</string>
    <string name="body_test_history_title">体测历史</string>
    <string name="body_test_history">体测历史</string>
    <string name="analyze_conclusion">分析结论</string>
    <string name="segment_muscle">节段肌肉</string>
    <string name="history_record">历史记录</string>
    <string name="body_test_grade">体测评分</string>
    <string name="body_test_grade_unit">Points</string>
    <string name="body_radar">身体成分分析</string>
    <string name="fat_analyze">肥胖分析</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="muscle_fat_advice">肌肉-卡路里-脂肪控制建议</string>
    <string name="buy_card_gym">健身房：</string>
    <string name="buy_card_type">卡种：</string>
    <string name="confirm_buy_card_info">请确认购卡信息，防止购卡错误！</string>
    <string name="card_money">金额：</string>
    <string name="select_city">请选择城市</string>
    <string name="hint_search_city">请输入城市名称或拼音查询</string>
    <string name="location_city">定位城市</string>
    <string name="start_business_city">已开业城市</string>
    <string name="telephone">联系电话</string>
    <string name="gym_phone">健身房电话:</string>
    <string name="liking_phone">Liking客服:</string>
    <string name="info_submit_success_and_waite">信息提交成功后商务人员会与您联系,请耐心等待</string>
    <string name="not_available">暂无</string>
    <string name="share_arrive">分享到</string>
    <string name="weixin_friend">微信好友</string>
    <string name="circle_of_friends">朋友圈</string>
</resources>