<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_guide_intellect_exercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide_intellect_exercise_back"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:src="@drawable/guide_icon_intellect"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/guide_intellect_exercise"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/guide_intellect_explain"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_guide_private_teacher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide_private_teacher_back"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:src="@drawable/guide_icon_private"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/guide_private_teacher"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/guide_private_teacher_explain"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_guide_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/guide_data_back"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:src="@drawable/guide_icon_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/guide_data"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/guide_data_explain"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/jump_main_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:background="@drawable/shape_radius_white_line_back"
            android:padding="10dp"
            android:text="@string/guide_to_main_btn"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>