<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_content_background"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/contact_join_back"/>

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_four_card_background"
            android:hint="@string/hint_input_name"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:textColor="@color/lesson_details_dark_back"
            android:textColorHint="@color/split_line_color"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_four_card_background"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="12dp"
            android:textColor="@color/lesson_details_dark_back"
            android:textColorHint="@color/split_line_color"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/city_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_four_card_background"
            android:hint="@string/select_city"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/icon_triangle"
            android:paddingTop="12dp"
            android:textColor="@color/lesson_details_dark_back"
            android:textColorHint="@color/split_line_color"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:padding="10dp"
            android:text="@string/info_submit_success_and_waite"
            android:textColor="@color/add_minus_dishes_text"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/immediately_submit"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@color/liking_green_btn_back"
        android:gravity="center"
        android:text="@string/immediately_submit"
        android:textColor="@color/white"
        android:textSize="14sp"/>
</RelativeLayout>