<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/cf5f5f5"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_8dp"
            android:layout_marginLeft="@dimen/spacing_12dp"
            android:layout_marginRight="@dimen/spacing_12dp"
            android:layout_marginTop="@dimen/spacing_12dp"
            android:layout_weight="1"
            android:background="@drawable/shape_radius_search_city_back"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_city_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_search_city"
                android:padding="10dp"
                android:textColor="@color/lesson_details_dark_back"
                android:textColorHint="@color/bg_hint_gray"
                android:textCursorDrawable="@null"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/delete_search_ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/spacing_8dp"
                android:background="@drawable/icon_search_delete"
                android:visibility="gone"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/search_cancel_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5.5"
            android:padding="@dimen/spacing_12dp"
            android:text="@string/cancel"
            android:textColor="@color/add_minus_dishes_text"
            android:textSize="@dimen/textsize_15"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:background="@drawable/shape_card_background"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_12dp"
            android:text="@string/location_city"
            android:textColor="@color/lesson_details_dark_back"/>

        <TextView
            android:id="@+id/location_cityName_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_12dp"
            android:layout_marginLeft="@dimen/spacing_12dp"
            android:background="@drawable/shape_location_back"
            android:paddingBottom="@dimen/spacing_12dp"
            android:paddingLeft="@dimen/spacing_24dp"
            android:paddingRight="@dimen/spacing_24dp"
            android:paddingTop="@dimen/spacing_12dp"
            android:textColor="@color/lesson_details_dark_back"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_12dp"
        android:text="@string/start_business_city"
        android:textColor="@color/lesson_details_dark_back"/>

    <FrameLayout
        android:id="@+id/change_city_fragment"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"/>
</LinearLayout>