<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/share_root_layout"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/share_arrive"
        android:textColor="@color/white"
        android:textSize="16sp"/>



    <LinearLayout
        android:id="@+id/share_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_wx_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/share_icon_wx_friend"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/weixin_friend"
                android:textColor="@color/white"
                android:textSize="13sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_wx_friend_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/share_icon_wx_friend_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/circle_of_friends"
                android:textColor="@color/white"
                android:textSize="13sp"/>
        </LinearLayout>


    </LinearLayout>


    <ImageButton
        android:id="@+id/cancel_image_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/chef_head_anim_dismiss"/>

</LinearLayout>